--- a/src/core/finetune-base-llama2-with-qlora.ipynb
+++ b/src/core/finetune-base-llama2-with-qlora.ipynb
@@ -2,82 +2,355 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  \u001b[1;31merror\u001b[0m: \u001b[1msubprocess-exited-with-error\u001b[0m\n",
-      "  \n",
-      "  \u001b[31m×\u001b[0m \u001b[32mBuilding wheel for tokenizers \u001b[0m\u001b[1;32m(\u001b[0m\u001b[32mpyproject.toml\u001b[0m\u001b[1;32m)\u001b[0m did not run successfully.\n",
-      "  \u001b[31m│\u001b[0m exit code: \u001b[1;36m1\u001b[0m\n",
-      "  \u001b[31m╰─>\u001b[0m \u001b[31m[51 lines of output]\u001b[0m\n",
-      "  \u001b[31m   \u001b[0m running bdist_wheel\n",
-      "  \u001b[31m   \u001b[0m running build\n",
-      "  \u001b[31m   \u001b[0m running build_py\n",
-      "  \u001b[31m   \u001b[0m creating build\n",
-      "  \u001b[31m   \u001b[0m creating build/lib.linux-x86_64-cpython-312\n",
-      "  \u001b[31m   \u001b[0m creating build/lib.linux-x86_64-cpython-312/tokenizers\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/__init__.py -> build/lib.linux-x86_64-cpython-312/tokenizers\n",
-      "  \u001b[31m   \u001b[0m creating build/lib.linux-x86_64-cpython-312/tokenizers/models\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/models/__init__.py -> build/lib.linux-x86_64-cpython-312/tokenizers/models\n",
-      "  \u001b[31m   \u001b[0m creating build/lib.linux-x86_64-cpython-312/tokenizers/decoders\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/decoders/__init__.py -> build/lib.linux-x86_64-cpython-312/tokenizers/decoders\n",
-      "  \u001b[31m   \u001b[0m creating build/lib.linux-x86_64-cpython-312/tokenizers/normalizers\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/normalizers/__init__.py -> build/lib.linux-x86_64-cpython-312/tokenizers/normalizers\n",
-      "  \u001b[31m   \u001b[0m creating build/lib.linux-x86_64-cpython-312/tokenizers/pre_tokenizers\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/pre_tokenizers/__init__.py -> build/lib.linux-x86_64-cpython-312/tokenizers/pre_tokenizers\n",
-      "  \u001b[31m   \u001b[0m creating build/lib.linux-x86_64-cpython-312/tokenizers/processors\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/processors/__init__.py -> build/lib.linux-x86_64-cpython-312/tokenizers/processors\n",
-      "  \u001b[31m   \u001b[0m creating build/lib.linux-x86_64-cpython-312/tokenizers/trainers\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/trainers/__init__.py -> build/lib.linux-x86_64-cpython-312/tokenizers/trainers\n",
-      "  \u001b[31m   \u001b[0m creating build/lib.linux-x86_64-cpython-312/tokenizers/implementations\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/implementations/sentencepiece_bpe.py -> build/lib.linux-x86_64-cpython-312/tokenizers/implementations\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/implementations/__init__.py -> build/lib.linux-x86_64-cpython-312/tokenizers/implementations\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/implementations/bert_wordpiece.py -> build/lib.linux-x86_64-cpython-312/tokenizers/implementations\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/implementations/base_tokenizer.py -> build/lib.linux-x86_64-cpython-312/tokenizers/implementations\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/implementations/sentencepiece_unigram.py -> build/lib.linux-x86_64-cpython-312/tokenizers/implementations\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/implementations/char_level_bpe.py -> build/lib.linux-x86_64-cpython-312/tokenizers/implementations\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/implementations/byte_level_bpe.py -> build/lib.linux-x86_64-cpython-312/tokenizers/implementations\n",
-      "  \u001b[31m   \u001b[0m creating build/lib.linux-x86_64-cpython-312/tokenizers/tools\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/tools/__init__.py -> build/lib.linux-x86_64-cpython-312/tokenizers/tools\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/tools/visualizer.py -> build/lib.linux-x86_64-cpython-312/tokenizers/tools\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/__init__.pyi -> build/lib.linux-x86_64-cpython-312/tokenizers\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/models/__init__.pyi -> build/lib.linux-x86_64-cpython-312/tokenizers/models\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/decoders/__init__.pyi -> build/lib.linux-x86_64-cpython-312/tokenizers/decoders\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/normalizers/__init__.pyi -> build/lib.linux-x86_64-cpython-312/tokenizers/normalizers\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/pre_tokenizers/__init__.pyi -> build/lib.linux-x86_64-cpython-312/tokenizers/pre_tokenizers\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/processors/__init__.pyi -> build/lib.linux-x86_64-cpython-312/tokenizers/processors\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/trainers/__init__.pyi -> build/lib.linux-x86_64-cpython-312/tokenizers/trainers\n",
-      "  \u001b[31m   \u001b[0m copying py_src/tokenizers/tools/visualizer-styles.css -> build/lib.linux-x86_64-cpython-312/tokenizers/tools\n",
-      "  \u001b[31m   \u001b[0m running build_ext\n",
-      "  \u001b[31m   \u001b[0m running build_rust\n",
-      "  \u001b[31m   \u001b[0m error: can't find Rust compiler\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m If you are using an outdated pip version, it is possible a prebuilt wheel is available for this package but pip is not able to install from it. Installing from the wheel would avoid the need for a Rust compiler.\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m To update pip, run:\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m     pip install --upgrade pip\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m and then retry package installation.\n",
-      "  \u001b[31m   \u001b[0m \n",
-      "  \u001b[31m   \u001b[0m If you did intend to build this package from source, try installing a Rust compiler from your system package manager and ensure it is on the PATH during installation. Alternatively, rustup (available at https://rustup.rs) is the recommended way to download and update the Rust compiler toolchain.\n",
-      "  \u001b[31m   \u001b[0m \u001b[31m[end of output]\u001b[0m\n",
-      "  \n",
-      "  \u001b[1;35mnote\u001b[0m: This error originates from a subprocess, and is likely not a problem with pip.\n",
-      "\u001b[31m  ERROR: Failed building wheel for tokenizers\u001b[0m\u001b[31m\n",
-      "\u001b[0m\u001b[31mERROR: ERROR: Failed to build installable wheels for some pyproject.toml based projects (tokenizers)\u001b[0m\u001b[31m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install -q accelerate==0.21.0 peft==0.4.0 bitsandbytes==0.40.2 transformers==4.31.0 trl==0.4.7 guardrail-ml==0.0.12 tensorboard\n",
     "# !apt-get -qq install poppler-utils tesseract-ocr\n",
     "!pip install -q unstructured[\"local-inference\"]==0.7.4 pillow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "from datasets import load_dataset\n",
+    "from transformers import (\n",
+    "    AutoModelForCausalLM,\n",
+    "    AutoTokenizer,\n",
+    "    BitsAndBytesConfig,\n",
+    "    HfArgumentParser,\n",
+    "    TrainingArguments,\n",
+    "    pipeline,\n",
+    "    logging,\n",
+    ")\n",
+    "from peft import LoraConfig, PeftModel, get_peft_model\n",
+    "from trl import SFTTrainer\n",
+    "from guardrail.client import (\n",
+    "    run_metrics,\n",
+    "    run_simple_metrics,\n",
+    "    create_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Used for multi-gpu\n",
+    "local_rank = -1\n",
+    "per_device_train_batch_size = 4\n",
+    "per_device_eval_batch_size = 4\n",
+    "gradient_accumulation_steps = 1\n",
+    "learning_rate = 2e-4\n",
+    "max_grad_norm = 0.3\n",
+    "weight_decay = 0.001\n",
+    "lora_alpha = 16\n",
+    "lora_dropout = 0.1\n",
+    "lora_r = 64\n",
+    "max_seq_length = None\n",
+    "\n",
+    "# The model that you want to train from the Hugging Face hub\n",
+    "# model_name = \"guardrail/llama-2-7b-guanaco-instruct-sharded\"\n",
+    "# model_name = \"NousResearch/Llama-2-7b-chat-hf\"\n",
+    "\n",
+    "model_name = \"meta-llama/Llama-2-7b-chat-hf\"\n",
+    "\n",
+    "# Fine-tuned model name\n",
+    "new_model = \"llama-2-7b-dental-test-v1\"\n",
+    "\n",
+    "# The instruction dataset to use\n",
+    "dataset_name = \"/kaggle/input/llama2-dental-no-context\"\n",
+    "\n",
+    "# Activate 4-bit precision base model loading\n",
+    "use_4bit = True\n",
+    "\n",
+    "# Activate nested quantization for 4-bit base models\n",
+    "use_nested_quant = False\n",
+    "\n",
+    "# Compute dtype for 4-bit base models\n",
+    "bnb_4bit_compute_dtype = \"float16\"\n",
+    "\n",
+    "# Quantization type (fp4 or nf4)\n",
+    "bnb_4bit_quant_type = \"nf4\"\n",
+    "\n",
+    "# Number of training epochs\n",
+    "num_train_epochs = 2\n",
+    "\n",
+    "# Enable fp16 training, (bf16 to True with an A100)\n",
+    "fp16 = False\n",
+    "\n",
+    "# Enable bf16 training\n",
+    "bf16 = False\n",
+    "\n",
+    "# Use packing dataset creating\n",
+    "packing = False\n",
+    "\n",
+    "# Enable gradient checkpointing\n",
+    "gradient_checkpointing = True\n",
+    "\n",
+    "# Optimizer to use, original is paged_adamw_32bit\n",
+    "optim = \"paged_adamw_32bit\"\n",
+    "\n",
+    "# Learning rate schedule (constant a bit better than cosine, and has advantage for analysis)\n",
+    "lr_scheduler_type = \"cosine\"\n",
+    "\n",
+    "# Number of optimizer update steps, 10K original, 20 for demo purposes\n",
+    "max_steps = -1\n",
+    "\n",
+    "# Fraction of steps to do a warmup for\n",
+    "warmup_ratio = 0.03\n",
+    "\n",
+    "# Group sequences into batches with same length (saves memory and speeds up training considerably)\n",
+    "group_by_length = True\n",
+    "\n",
+    "# Save checkpoint every X updates steps\n",
+    "save_steps = 10\n",
+    "\n",
+    "# Log every X updates steps\n",
+    "logging_steps = 1\n",
+    "\n",
+    "# The output directory where the model predictions and checkpoints will be written\n",
+    "output_dir = \"./results\"\n",
+    "\n",
+    "# Load the entire model on the GPU 0\n",
+    "device_map = {\"\": 0}\n",
+    "\n",
+    "# Visualize training\n",
+    "report_to = \"tensorboard\"\n",
+    "\n",
+    "# Tensorboard logs\n",
+    "tb_log_dir = \"./results/logs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_model(model_name):\n",
+    "    # Load tokenizer and model with QLoRA configuration\n",
+    "    compute_dtype = getattr(torch, bnb_4bit_compute_dtype)\n",
+    "\n",
+    "    bnb_config = BitsAndBytesConfig(\n",
+    "        load_in_4bit=use_4bit,\n",
+    "        bnb_4bit_quant_type=bnb_4bit_quant_type,\n",
+    "        bnb_4bit_compute_dtype=compute_dtype,\n",
+    "        bnb_4bit_use_double_quant=use_nested_quant,\n",
+    "    )\n",
+    "\n",
+    "    if compute_dtype == torch.float16 and use_4bit:\n",
+    "        major, _ = torch.cuda.get_device_capability()\n",
+    "        if major >= 8:\n",
+    "            print(\"=\" * 80)\n",
+    "            print(\"Your GPU supports bfloat16, you can accelerate training with the argument --bf16\")\n",
+    "            print(\"=\" * 80)\n",
+    "\n",
+    "    model = AutoModelForCausalLM.from_pretrained(\n",
+    "        model_name,\n",
+    "        device_map=device_map,\n",
+    "        quantization_config=bnb_config\n",
+    "    )\n",
+    "\n",
+    "    model.config.use_cache = False\n",
+    "    model.config.pretraining_tp = 1\n",
+    "\n",
+    "    # Load LoRA configuration\n",
+    "    peft_config = LoraConfig(\n",
+    "        lora_alpha=lora_alpha,\n",
+    "        lora_dropout=lora_dropout,\n",
+    "        r=lora_r,\n",
+    "        bias=\"none\",\n",
+    "        task_type=\"CAUSAL_LM\",\n",
+    "    )\n",
+    "\n",
+    "    # Load Tokenizer\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(model_name, trust_remote_code=True)\n",
+    "    tokenizer.pad_token = tokenizer.eos_token\n",
+    "    tokenizer.padding_side = \"right\"\n",
+    "\n",
+    "    return model, tokenizer, peft_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import login\n",
+    "\n",
+    "# !python -c \"from huggingface_hub.hf_api import HfFolder; HfFolder.save_token('7dfdc3694ead1a038bfa1cbe7bbe7946c722635d')\"\n",
+    "login(token=\"YOUR HUGGING FACE TOKEN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model, tokenizer, peft_config = load_model(model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_dolly(sample):\n",
+    "#     print(\"dolly data: \", sample)\n",
+    "    instruction = f\"<s>[INST] {sample['question']}\"\n",
+    "#     context = f\"<<SYS>>{sample['context']}<<SYS>>\" if len(sample[\"context\"]) > 0 else None\n",
+    "    response = f\" [/INST] {sample['answer']}\"\n",
+    "    # join all the parts together\n",
+    "    prompt = \"\".join([i for i in [instruction, response] if i is not None])\n",
+    "#     print(\"prompt data:\", prompt)\n",
+    "    return prompt\n",
+    "\n",
+    "# template dataset to add prompt to each sample\n",
+    "def template_dataset(sample):\n",
+    "    sample[\"text\"] = f\"{format_dolly(sample)}{tokenizer.eos_token}\"\n",
+    "#     print(\"updated sample: \", sample)\n",
+    "    return sample\n",
+    "\n",
+    "# apply prompt template per sample\n",
+    "dataset = load_dataset(dataset_name, split=\"train\")\n",
+    "\n",
+    "# Shuffle the dataset\n",
+    "dataset_shuffled = dataset.shuffle(seed=42)\n",
+    "\n",
+    "# Select the first 50 rows from the shuffled dataset, comment if you want 15k\n",
+    "dataset = dataset_shuffled.select(range(100))\n",
+    "print(dataset.features)\n",
+    "dataset = dataset.map(template_dataset, remove_columns=list(dataset.features))\n",
+    "# dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# logging.set_verbosity(logging.CRITICAL)\n",
+    "\n",
+    "# Run text generation pipeline with our next model\n",
+    "prompt = \"What potential drug interactions are associated with abacavir in dental practice?\"\n",
+    "# Ignore warnings\"\n",
+    "pipe = pipeline(task=\"text-generation\", model=model, tokenizer=tokenizer, max_length=1024)\n",
+    "result = pipe(f\"<s>[INST]{prompt} [/INST]\")\n",
+    "print(result[0]['generated_text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_arguments = TrainingArguments(\n",
+    "    output_dir=output_dir,\n",
+    "    per_device_train_batch_size=per_device_train_batch_size,\n",
+    "    gradient_accumulation_steps=gradient_accumulation_steps,\n",
+    "    optim=optim,\n",
+    "    save_steps=save_steps,\n",
+    "    logging_steps=logging_steps,\n",
+    "    learning_rate=learning_rate,\n",
+    "    fp16=fp16,\n",
+    "    bf16=bf16,\n",
+    "    max_grad_norm=max_grad_norm,\n",
+    "    max_steps=max_steps,\n",
+    "    warmup_ratio=warmup_ratio,\n",
+    "    group_by_length=group_by_length,\n",
+    "    lr_scheduler_type=lr_scheduler_type,\n",
+    "    report_to=\"tensorboard\"\n",
+    ")\n",
+    "\n",
+    "trainer = SFTTrainer(\n",
+    "    model=model,\n",
+    "    train_dataset=dataset,\n",
+    "    peft_config=peft_config,\n",
+    "    dataset_text_field=\"text\",\n",
+    "    max_seq_length=max_seq_length,\n",
+    "    tokenizer=tokenizer,\n",
+    "    args=training_arguments,\n",
+    "    packing=packing,\n",
+    ")\n",
+    "\n",
+    "trainer.train()\n",
+    "trainer.model.save_pretrained(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ignore warnings\n",
+    "# logging.set_verbosity(logging.CRITICAL)\n",
+    "\n",
+    "# Run text generation pipeline with our next model\n",
+    "prompt = \"do you know what is Acebutolol?\"\n",
+    "pipe = pipeline(task=\"text-generation\", model=model, tokenizer=tokenizer, max_length=1024)\n",
+    "result = pipe(f\"<s>[INST]{prompt} [/INST]\")\n",
+    "print(result[0]['generated_text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.cuda.empty_cache()\n",
+    "# Empty VRAM\n",
+    "del model\n",
+    "del pipe\n",
+    "del trainer\n",
+    "import gc\n",
+    "gc.collect()\n",
+    "gc.collect()\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Reload model in FP16 and merge it with LoRA weights\n",
+    "# base_model = AutoModelForCausalLM.from_pretrained(\n",
+    "#     model_name,\n",
+    "#     return_dict=True,\n",
+    "#     torch_dtype=torch.float16,\n",
+    "#     device_map=device_map,\n",
+    "# )\n",
+    "# model = PeftModel.from_pretrained(base_model, output_dir)\n",
+    "# model = model.merge_and_unload()\n",
+    "\n",
+    "# # Reload tokenizer to save it\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(model_name, trust_remote_code=True)\n",
+    "# tokenizer.pad_token = tokenizer.eos_token\n",
+    "# tokenizer.padding_side = \"right\""
    ]
   },
   {
